Added error messaging improvements
